fix: Resolve all build failures and align test suite with refactored code
This commit resolves a cascade of compilation and test execution errors that arose from a major refactoring of DTOs, entities, and mappers.

Key fixes include:
- Removed duplicate test files causing Spring context conflicts (BeanDefinitionOverrideException).
- Corrected JPA query syntax by adding the missing @Param annotation in NewsRepository.
- Aligned all test classes with the new DTO structures (records vs. classes) and updated entity models, removing references to obsolete fields like 'body' and 'teaser'.
- Refactored manual mappers to use MapStruct for consistency and reliability.
- Ensured all integration tests correctly set up the Spring Security context.

With these changes, the entire test suite now compiles and runs successfully, stabilizing the build process.